...
                android:text="@{viewModel.title}"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text="Do you confirm an\nupgrade to SUV class?" />

            <TextView
                android:id="@+id/content_text"
                style="@style/RATextView.MontserratRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
...
                android:background="@android:color/darker_gray"
                android:padding="40dp"
                android:visibility="@{viewModel.priorityFareVisibility}"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/surge_icon"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_below="@+id/line"
                android:layout_marginRight="5dp"
                android:layout_toStartOf="@+id/surge_factor_text"
                android:src="@drawable/ic_p_inside_circle"
                android:visibility="@{viewModel.priorityFareVisibility}"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/surge_factor_text"
...
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView6"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/accept_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/blue_confirmation_button_dialog"
                    android:text="@string/btn_yes"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/decline_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/gray_decline_button_dialog"
                    android:text="@string/btn_no"
                    android:textColor="@color/grey_700" />
            </LinearLayout>

        </RelativeLayout>

        <ImageButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/visible_part"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:background="@drawable/icn_cancel" />
...
