...
        <item quantity="one">%d star</item>
        <item quantity="other">%d stars</item>
    </plurals>

    <string name="terms_invalid">Can\'t load Terms and Conditions. Please contact support</string>
    <string name="terms_load_error">Failed loading Terms and Conditions. Please retry</string>
    <string name="google_map">Google Map</string>
    <string name="car_marker">Car Marker</string>
    <string name="pickup_marker">Pickup Marker</string>
    <string name="destination_marker">Destination Marker</string>
    <string name="prev_ride_marker">Prev Ride Marker</string>
    <string name="next_ride_marker">Next Ride Marker</string>
    <string name="eta_marker">Eta Marker:</string>
...
    <string name="please_select_photo">Please select photo</string>
    <string name="enter_value">Enter value</string>
    <string name="ride_upgrade_msg">Do you confirm an upgrade from: %1$s to: %2$s class?</string>
    <string name="my_location">My Location</string>

    <!-- ride upgrade -->
    <string name="priority_fare_text">PRIORITY FARE: %s</string>
    <string name="upgrade_ride_title">Do you confirm an\nupgrade to %s class?</string>
    <string name="upgrade_ride_content">Your driver requested a car class\nupgrade from %1$s to %2$s</string>
    <string name="upgrade_failed">Not upgrading to SUV</string>
    <string name="no_car_categories_error_msg">We are unable to find any available car category for your location</string>

    <string name="verify_mobile">Please enter your verification code</string>
    <string name="verify_mobile_text">that was sent to</string>
    <string name="resend">resend the text</string>
...
    <string name="failed_sending_phone_for_verification">Failed sending phone number for verification, try use resend text</string>
    <string name="failed_to_verify_phone_number">Failed to verify phone number</string>
    <string name="title_verify_phone">Verify Mobile</string>

    <string name="bypass_pin_title">TEST MODE</string>
    <string name="bypass_pin_message">Do you want to bypass pin verification?</string>
    <string name="upgrade_ride_expired_msg">Upgrade ride request expired</string>
    <string name="upgrade_ride_cancelled_msg">Upgrade ride request cancelled</string>
    <string name="surge_updated_dialog_msg">Surge has been updated please review it</string>
    <string name="surge_disabled_fialog_msg">Surge has been disabled. Do you want to request ride?</string>


    <string name="nickname_hint">Nickname</string>
    <string name="rider_marker_title">Rider Position</string>
...
