...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:background="@color/black_10_opaq"
        tools:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/ride_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/fare_estimate_button"
                        style="@style/BorderLessButton"
                        android:layout_width="@dimen/zero_width"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawablePadding="@dimen/btn_drawable_driver_details_padding"
                        android:drawableTop="@drawable/ic_fare_estimate"
...

                </RelativeLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/driver_container_small"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="40dp"
                android:elevation="6dp"
...
                            android:text="Jimbo Jimbo"
                            android:textAllCaps="true"
                            android:textColor="@color/charcoalGreyTwo"
                            android:textSize="12dp" />

                        <TextView
                            android:id="@+id/car_category_small"
                            style="@style/RATextView.MontserratRegular"
                            android:layout_width="match_parent"
                            android:layout_height="17dp"
                            android:gravity="center"
                            android:text="SUV"
                            android:textAllCaps="true"
                            android:textSize="12dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
...
