...
        <variable
            name="mapModel"
            type="com.rideaustin.ui.map.MapViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mapContainer"
        style="@style/RelativeLayout.Base"
        android:animateLayoutChanges="true">

        <com.rideaustin.utils.TouchWrapper
            android:id="@+id/map"
            android:layout_width="match_parent"
...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <TextView
                    android:id="@+id/pickup_address"
                    style="@style/RATextView.MontserratLight"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/autocomplete_height"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/white"
                    android:clickable="true"
...
                        app:ringColor="#FFFFFF"
                        app:ringThickness="1dp" />

                </FrameLayout>

                <TextView
                    android:id="@+id/set_pickup_location"
                    style="@style/RATextView.MontserratLight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="4"
...
